--- a/popup/popup.css
+++ b/popup/popup.css
@@ -157,6 +157,13 @@ body {
     align-items: center;
 }
 
+.setting-description {
+    font-size: 11px;
+    color: var(--text-secondary);
+    opacity: 0.8;
+    margin-top: 3px;
+}
+
 .toggle-switch {
     position: relative;
     width: 52px;
